<resources>
    <string name="app_name">ExamenApps</string>
    <string name="email">Email</string>
    <string name="exam_app_that_implements_a_surveys">Exam App that implements a Surveys</string>
    <string name="sign_in_or_create_an_account">Sign in or create an account</string>
    <string name="or">or</string>
    <string name="sign_in_as_guest">Sign in as guest</string>
    <string name="logo">logo</string>
    <string name="continue1">continue</string>
    <string name="or1">or</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="atras">atras</string>
    <string name="sign_in1">Sign in</string>
    <string name="numberPage">1</string>
    <string name="textQuestion">pregunta</string>
    <string name="textSelectQ">TextView</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="question1">In my free time I like to…</string>
    <string name="question2">What is your favorite movie?</string>
    <string name="question3">When was the last time you ordered takeaway  because you  </string>
    <string name="question4">How do you feel about selfies?</string>
    <string name="qSelect"> Select all that apply</string>
    <string name="qSelect1">Select one.</string>
    <string name="qSelect2">Select date.</string>
    <string name="of_6">of 4</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="read">Read</string>
    <string name="work_out">Work out</string>
    <string name="draw">Draw</string>
    <string name="play_video_games">PLay video games</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lutbreak">Lutbreak</string>
    <string name="the_social">The social</string>
    <string name="future">Future</string>
    <string name="radiobutton">RadioButton</string>
    <string name="star_trek">Star trek</string>
    <string name="select_day">Select day</string>
</resources>