<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">

            <TextView
                android:id="@+id/numberPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="20sp"
                android:text="@string/numberPage" />

            <TextView
                android:id="@+id/numberPages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/of_6" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_baseline_close_24"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginBottom="30dp"
                android:text="@string/textQuestion"
                android:textStyle="bold"
                android:background="@drawable/rounded_corner"
                />

            <TextView
                android:id="@+id/textSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textSelectQ"
                android:textSize="22sp"
                android:layout_marginBottom="20dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <Button
                android:id="@+id/bPrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/previous"
                android:background="@drawable/diseno_boton1"
                android:padding="2dp"
                />

            <Button
                android:id="@+id/bNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="2dp"
                android:background="@drawable/diseno_boton1"
                android:text="@string/next" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>