<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo"
                android:layout_gravity="center"
                android:contentDescription="@string/logo" />

            <TextView
                android:id="@+id/textLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exam_app_that_implements_a_surveys"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#A6000000"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textScreen1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/sign_in_or_create_an_account"
                android:textAlignment="center"
                android:textColor="#757575"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bConitue1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:background="@drawable/diseno_boton1"
                android:text="@string/continue1" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginBottom="3dp"
                android:layout_weight="1"
                android:text="@string/or1" />

            <Button
                android:id="@+id/bSign1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/diseno_boton"
                android:text="@string/sign_in_as_guest"
                android:textColor="@color/purple_700" />


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>