<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="80dp">

            <ImageButton
                android:id="@+id/bBack"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_weight="0"
                android:background="#00FFFFFF"
                android:contentDescription="@string/atras"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="7dp"
                android:hint="@string/email1"
             >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password1"
                android:layout_marginBottom="20dp"
                app:endIconMode="password_toggle"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#757575"
                    tools:ignore="TextContrastCheck,TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bSignIn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="100dp"
                android:layout_weight="1"
                android:background="@drawable/diseno_boton1"
                android:text="@string/sign_in1"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="#8D6200EE"
                android:textSize="20sp"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>