<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/pregunta2"
    tools:context=".pregunta2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:background="@drawable/diseno_boton"
                android:text="@string/star_trek"
                android:textAlignment="center"
                android:textSize="@dimen/optionsText"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:button="@null"
                android:textAlignment="center"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:background="@drawable/diseno_boton"
                android:text="@string/future"
                android:textSize="@dimen/optionsText"/>

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:background="@drawable/diseno_boton"
                android:text="@string/the_social"
                android:textAlignment="center"
                android:textSize="@dimen/optionsText"/>

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:button="@null"
                android:textAlignment="center"
                android:drawableEnd="?android:attr/listChoiceIndicatorSingle"
                android:background="@drawable/diseno_boton"
                android:text="@string/lutbreak"
                android:textSize="@dimen/optionsText"/>
        </RadioGroup>
    </LinearLayout>


    </FrameLayout>